# zfs-gui-thing

./: Cargo.toml  README.md  shell.nix
.github/workflows/: ci.yml
src/: datasets.rs  main.rs  utils.rs
vgtk_treeview/: Cargo.toml
vgtk_treeview/src/: lib.rs
vgtk_treeview_macros/: Cargo.toml
vgtk_treeview_macros/src/: lib.rs  to_glib_types.rs  to_treeview_columns.rs
