[package]
name = "zfs-gui-thing"
version = "0.1.0"
authors = ["Pascal Hertleif <killercup@gmail.com>"]
edition = "2018"

[dependencies]
vgtk = { version = "0.2.0" }
pretty_env_logger = "0.4.0"
anyhow = "1.0.26"
humansize = "1.1.0"
async-std = "1.5.0"
log = "0.4.8"
vgtk_treeview = { path = "./vgtk_treeview" }
vgtk_treeview_macros = { path = "./vgtk_treeview_macros/" }

[workspace]
members = [
    "vgtk_treeview",
    "vgtk_treeview_macros",
]
