[package]
name = "vgtk_treeview"
version = "0.1.0"
authors = ["Pascal Hertleif <killercup@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vgtk = "0.1.0"
vgtk_treeview_macros = { path = "../vgtk_treeview_macros/" }
