[package]
name = "vgtk_treeview_macros"
description = "macros to work with gtk treeviews with less pain"
version = "0.1.0"
authors = ["Pascal Hertleif <killercup@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/killercup/zfs-gui-thing"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.14"
quote = "1.0.2"
proc-macro2 = "1.0.8"
darling = "0.10.2"
